upgrade to selenium 4 beta4