@@ -32,7 +32,7 @@ public final class HtmlElementUtils {
             InstantiationException, NoSuchMethodException, InvocationTargetException {
         if (clazz.isMemberClass() && !Modifier.isStatic(clazz.getModifiers())) {
             Class outerClass = clazz.getDeclaringClass();
-            Object outerObject = outerClass.newInstance();
+            Object outerObject = outerClass.getDeclaredConstructor().newInstance();
             return invokeConstructor(clazz, Lists.asList(outerObject, args).toArray());
         }
         return invokeConstructor(clazz, args);
@@ -47,7 +47,7 @@ public final class HtmlElementUtils {
     }
 
     public static <T> boolean isHtmlElement(T instance) {
-        return HtmlElement.class.isInstance(instance);
+        return instance instanceof HtmlElement;
     }
 
     public static boolean isTypifiedElement(Field field) {
